2002-10-19  Andras Varga

	* cmodule.cc, ctypes.cc, csimul.cc: refactoring around buildInside(),
        cNetworkType and Define_Network(), see include/ChangeLog.

2002-10-09  Andras Varga

	* refactoring (see include/ChangeLog), cosmetics

2002-10-07  Andras Varga

	* cobject.cc, ctypes.cc, added onstartup.cc: refactoring: global 
	registration lists now use EXECUTE_ON_STARTUP macro, see 
	include/ChangeLog for more info.

2002-10-04  Andras Varga

	* error handling with exceptions has been refined.

	* csimul.cc: incEventCount() removed, incrementing event count
	was moved into doOneEvent()

	* csimul.h: several methods removed from cSimulation and moved
	into the Envir library: timeLimit(), simTimeLimit(), startClock(),
        stopClock(), resetClock(), checkTimes().

2002-09-07 Andras Varga

	* added cchannel.cc, modified carray.cc, cgate.cc, cmessage.cc, 
	cmodule.cc, csimul.cc, mpimod.cc, mpipack.cc, netpack.cc, pvmmod.cc,
        pvmpack.cc: introduced channel objects -- see include/ChangeLog for
        more details

2002-07-08  Andras Varga

	* coutvect.cc (cOutVector methods): register vector as early as 
	possible. This is needed by the Akaroa output vector manager because
	Akaroa needs to know the total number of parameters before recording 
	the first value. (This change has the side effect that empty vectors
	also get declared in the output vector file, which is redundant.)

2002-07-04  Andras Varga

	* cdispstr.h added: utility class cDisplayString

2002-07-03  Andras Varga

	* csimul.cc (doOneEvent()): bugfix: added missing ev.messageDelivered()
	call that could cause a "phantom" message being animated in Tkenv with
        handleMessage()-based simple modules

2002-06-27  Andras Varga

	* cexception.cc/h added; most opp_error() calls replaced with 
	throw new cException(...). Exceptions are caught in 
	cSimpleModule::activate() (for activity()-based modules) and
	in cSimulation::doOneEvent() (for handleMessage()-based modules),